--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -7,6 +7,7 @@ on:
 permissions:
   contents: write
   pull-requests: write
+  packages: write
 
 jobs:
   release-please:
@@ -20,27 +21,14 @@ jobs:
         with:
           release-type: go
 
-  build:
+  goreleaser:
     needs: release-please
     if: ${{ needs.release-please.outputs.release_created }}
-    strategy:
-      matrix:
-        include:
-          - os: ubuntu-latest
-            goos: linux
-            goarch: amd64
-          - os: ubuntu-latest
-            goos: linux
-            goarch: arm64
-          - os: macos-latest
-            goos: darwin
-            goarch: amd64
-          - os: macos-latest
-            goos: darwin
-            goarch: arm64
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
@@ -50,24 +38,23 @@ jobs:
         with:
           go-version: "1.24"
 
-      - name: Install frontend dependencies
-        run: cd frontend && bun install
+      - name: Setup QEMU
+        uses: docker/setup-qemu-action@v3
 
-      - name: Build frontend
-        run: cd frontend && bun run build
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Build backend
-        env:
-          GOOS: ${{ matrix.goos }}
-          GOARCH: ${{ matrix.goarch }}
-          CGO_ENABLED: 0
-        run: |
-          cd backend
-          go build -ldflags="-w -s -X main.Version=${{ needs.release-please.outputs.tag_name }}" \
-            -o ../attic-${{ matrix.goos }}-${{ matrix.goarch }} ./cmd/server
-
-      - name: Upload release artifact
-        uses: softprops/action-gh-release@v2
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
         with:
-          tag_name: ${{ needs.release-please.outputs.tag_name }}
-          files: attic-${{ matrix.goos }}-${{ matrix.goarch }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v6
+        with:
+          version: "~> v2"
+          args: release --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
