--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -58,3 +58,4 @@ jobs:
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TMDB_API_KEY: ${{ secrets.TMDB_API_KEY }}
