--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -21,6 +21,7 @@ builds:
     ldflags:
       - -s -w
       - -X main.Version={{.Version}}
+      - -X github.com/mendelui/attic/internal/plugin/tmdb.APIKey={{ .Env.TMDB_API_KEY }}
 
 archives:
   - id: attic
