--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -32,7 +32,7 @@ dockers_v2:
       - attic
     dockerfile: Dockerfile.goreleaser
     images:
-      - ghcr.io/mendelui/attic
+      - ghcr.io/lmmendes/attic
     tags:
       - "{{ .Version }}"
       - latest
