--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,72 @@
+version: "3.8"
+
 services:
+  attic:
+    image: ghcr.io/lmmendes/attic:latest
+    ports:
+      - "8080:8080"
+    environment:
+      - PORT=8080
+      - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?sslmode=disable
+      - S3_ENDPOINT=${S3_ENDPOINT}
+      - S3_BUCKET=${S3_BUCKET}
+      - S3_REGION=${S3_REGION}
+      - S3_ACCESS_KEY=${S3_ACCESS_KEY}
+      - S3_SECRET_KEY=${S3_SECRET_KEY}
+      - OIDC_ISSUER=${OIDC_ISSUER}
+      - OIDC_CLIENT_ID=${OIDC_CLIENT_ID}
+      - BASE_URL=${BASE_URL:-http://localhost:8080}
+      - SESSION_SECRET=${SESSION_SECRET}
+      - CORS_ORIGINS=${CORS_ORIGINS:-http://localhost:8080}
+    depends_on:
+      postgres:
+        condition: service_healthy
+    restart: unless-stopped
+    networks:
+      - attic-network
+
   postgres:
     image: postgres:16-alpine
-    container_name: attic-postgres
     environment:
-      POSTGRES_USER: attic
-      POSTGRES_PASSWORD: attic
-      POSTGRES_DB: attic
-    ports:
-      - "5432:5432"
+      POSTGRES_USER: ${POSTGRES_USER:-attic}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB:-attic}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U attic"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-attic}"]
       interval: 5s
       timeout: 5s
       retries: 5
-
-  localstack:
-    image: localstack/localstack:latest
-    container_name: attic-localstack
-    environment:
-      - SERVICES=s3
-      - DEBUG=0
-      - DEFAULT_REGION=us-east-1
-    ports:
-      - "4566:4566"
-    volumes:
-      - localstack_data:/var/lib/localstack
-      - ./scripts/localstack-init.sh:/etc/localstack/init/ready.d/init.sh
+    restart: unless-stopped
+    networks:
+      - attic-network
 
   keycloak:
     image: quay.io/keycloak/keycloak:26.0
-    container_name: attic-keycloak
-    command: start-dev --import-realm
+    command: start --optimized
     environment:
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin
+      KC_DB: postgres
+      KC_DB_URL: jdbc:postgresql://postgres:5432/${KEYCLOAK_DB:-keycloak}
+      KC_DB_USERNAME: ${POSTGRES_USER:-attic}
+      KC_DB_PASSWORD: ${POSTGRES_PASSWORD}
+      KC_HOSTNAME: ${KEYCLOAK_HOSTNAME}
+      KC_HOSTNAME_STRICT: "false"
+      KC_HTTP_ENABLED: "true"
+      KEYCLOAK_ADMIN: ${KEYCLOAK_ADMIN:-admin}
+      KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_ADMIN_PASSWORD}
     ports:
       - "8180:8080"
-    volumes:
-      - ./scripts/keycloak-realm.json:/opt/keycloak/data/import/realm.json
-    healthcheck:
-      test: ["CMD-SHELL", "exec 3<>/dev/tcp/127.0.0.1/8080"]
-      interval: 10s
-      timeout: 5s
-      retries: 10
+    depends_on:
+      postgres:
+        condition: service_healthy
+    restart: unless-stopped
+    networks:
+      - attic-network
 
 volumes:
   postgres_data:
-  localstack_data:
+
+networks:
+  attic-network:
+    driver: bridge
