--- a/.env.example
+++ b/.env.example
@@ -14,31 +14,31 @@ POSTGRES_DB=attic
 # S3/Object Storage Configuration
 # --------------------------------------
 # For AWS S3
-S3_ENDPOINT=https://s3.amazonaws.com
-S3_REGION=us-east-1
-S3_BUCKET=your-bucket-name
-S3_ACCESS_KEY=your-access-key
-S3_SECRET_KEY=your-secret-key
+ATTIC_S3_ENDPOINT=https://s3.amazonaws.com
+ATTIC_S3_REGION=us-east-1
+ATTIC_S3_BUCKET=your-bucket-name
+ATTIC_S3_ACCESS_KEY=your-access-key
+ATTIC_S3_SECRET_KEY=your-secret-key
 
 # For MinIO/LocalStack (development)
-# S3_ENDPOINT=http://localhost:4566
-# S3_REGION=us-east-1
-# S3_BUCKET=attic-attachments
-# S3_ACCESS_KEY=test
-# S3_SECRET_KEY=test
+# ATTIC_S3_ENDPOINT=http://localhost:4566
+# ATTIC_S3_REGION=us-east-1
+# ATTIC_S3_BUCKET=attic-attachments
+# ATTIC_S3_ACCESS_KEY=test
+# ATTIC_S3_SECRET_KEY=test
 
 # --------------------------------------
 # OIDC/Keycloak Configuration
 # --------------------------------------
-OIDC_ISSUER=https://your-keycloak-domain/realms/attic
-OIDC_CLIENT_ID=attic-web
+ATTIC_OIDC_ISSUER=https://your-keycloak-domain/realms/attic
+ATTIC_OIDC_CLIENT_ID=attic-web
 
 # For development with local Keycloak
-# OIDC_ISSUER=http://localhost:8180/realms/attic
-# OIDC_CLIENT_ID=attic-web
+# ATTIC_OIDC_ISSUER=http://localhost:8180/realms/attic
+# ATTIC_OIDC_CLIENT_ID=attic-web
 
 # Optional: Disable auth for development
-# AUTH_DISABLED=true
+# ATTIC_AUTH_DISABLED=true
 
 # --------------------------------------
 # Frontend Session Configuration
@@ -58,4 +58,7 @@ KEYCLOAK_DB=keycloak
 # --------------------------------------
 # Optional: Backend Configuration
 # --------------------------------------
-# PORT=8080
+# ATTIC_PORT=8080
+# ATTIC_BASE_URL=http://localhost:8080
+# ATTIC_CORS_ORIGINS=http://localhost:3000
+# ATTIC_SESSION_SECRET=change-me-in-production-32chars!
