--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,18 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - PORT=8080
-      - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?sslmode=disable
-      - S3_ENDPOINT=${S3_ENDPOINT}
-      - S3_BUCKET=${S3_BUCKET}
-      - S3_REGION=${S3_REGION}
-      - S3_ACCESS_KEY=${S3_ACCESS_KEY}
-      - S3_SECRET_KEY=${S3_SECRET_KEY}
-      - OIDC_ISSUER=${OIDC_ISSUER}
-      - OIDC_CLIENT_ID=${OIDC_CLIENT_ID}
-      - BASE_URL=${BASE_URL:-http://localhost:8080}
-      - SESSION_SECRET=${SESSION_SECRET}
-      - CORS_ORIGINS=${CORS_ORIGINS:-http://localhost:8080}
+      - ATTIC_PORT=8080
+      - ATTIC_DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?sslmode=disable
+      - ATTIC_S3_ENDPOINT=${ATTIC_S3_ENDPOINT}
+      - ATTIC_S3_BUCKET=${ATTIC_S3_BUCKET}
+      - ATTIC_S3_REGION=${ATTIC_S3_REGION}
+      - ATTIC_S3_ACCESS_KEY=${ATTIC_S3_ACCESS_KEY}
+      - ATTIC_S3_SECRET_KEY=${ATTIC_S3_SECRET_KEY}
+      - ATTIC_OIDC_ISSUER=${ATTIC_OIDC_ISSUER}
+      - ATTIC_OIDC_CLIENT_ID=${ATTIC_OIDC_CLIENT_ID}
+      - ATTIC_BASE_URL=${ATTIC_BASE_URL:-http://localhost:8080}
+      - ATTIC_SESSION_SECRET=${ATTIC_SESSION_SECRET}
+      - ATTIC_CORS_ORIGINS=${ATTIC_CORS_ORIGINS:-http://localhost:8080}
     depends_on:
       postgres:
         condition: service_healthy
