--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
-    "typecheck": "nuxt typecheck"
+    "typecheck": "nuxt typecheck",
+    "test": "vitest",
+    "test:run": "vitest run"
   },
   "dependencies": {
     "@iconify-json/lucide": "^1.2.82",
@@ -19,9 +21,16 @@
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.12.1",
+    "@nuxt/test-utils": "^3.23.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@testing-library/vue": "^8.1.0",
     "@types/node": "^25.0.6",
+    "@vue/test-utils": "^2.4.6",
     "eslint": "^9.39.2",
+    "happy-dom": "^20.3.1",
+    "msw": "^2.12.7",
     "typescript": "^5.9.3",
+    "vitest": "^4.0.17",
     "vue-tsc": "^3.2.1"
   },
   "packageManager": "pnpm@10.26.1"
