--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,3 +37,6 @@ jobs:
 
       - name: Backend tests
         run: cd backend && go test -v ./...
+
+      - name: Frontend tests
+        run: cd frontend && bun run test
