feat(security): Added user id and group id to io operations

--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,16 @@ KEYCLOAK_DB=keycloak
 # ATTIC_BASE_URL=http://localhost:8080
 # ATTIC_CORS_ORIGINS=http://localhost:3000
 # ATTIC_SESSION_SECRET=change-me-in-production-32chars!
+
+# --------------------------------------
+# Local Storage Configuration
+# --------------------------------------
+# Used when S3 credentials are not configured
+# ATTIC_LOCAL_STORAGE_PATH=/data/uploads
+
+# File ownership (useful in Docker containers)
+# Set PUID/PGID to match your host user for proper file permissions
+# Find your user ID with: id -u
+# Find your group ID with: id -g
+# ATTIC_PUID=1000
+# ATTIC_PGID=1000
