--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,16 @@ services:
       - ATTIC_S3_REGION=${ATTIC_S3_REGION}
       - ATTIC_S3_ACCESS_KEY=${ATTIC_S3_ACCESS_KEY}
       - ATTIC_S3_SECRET_KEY=${ATTIC_S3_SECRET_KEY}
+      - ATTIC_LOCAL_STORAGE_PATH=${ATTIC_LOCAL_STORAGE_PATH:-/data/uploads}
+      - ATTIC_PUID=${ATTIC_PUID:-}
+      - ATTIC_PGID=${ATTIC_PGID:-}
       - ATTIC_OIDC_ISSUER=${ATTIC_OIDC_ISSUER}
       - ATTIC_OIDC_CLIENT_ID=${ATTIC_OIDC_CLIENT_ID}
       - ATTIC_BASE_URL=${ATTIC_BASE_URL:-http://localhost:8080}
       - ATTIC_SESSION_SECRET=${ATTIC_SESSION_SECRET}
       - ATTIC_CORS_ORIGINS=${ATTIC_CORS_ORIGINS:-http://localhost:8080}
+    volumes:
+      - attic_uploads:/data/uploads
     depends_on:
       postgres:
         condition: service_healthy
@@ -66,6 +71,7 @@ services:
 
 volumes:
   postgres_data:
+  attic_uploads:
 
 networks:
   attic-network:
