fix(auth): fix oidc callback issue

--- a/.env.example
+++ b/.env.example
@@ -32,10 +32,12 @@ ATTIC_S3_SECRET_KEY=your-secret-key
 # --------------------------------------
 ATTIC_OIDC_ISSUER=https://your-keycloak-domain/realms/attic
 ATTIC_OIDC_CLIENT_ID=attic-web
+ATTIC_OIDC_CLIENT_SECRET=your-client-secret-here
 
 # For development with local Keycloak
 # ATTIC_OIDC_ISSUER=http://localhost:8180/realms/attic
 # ATTIC_OIDC_CLIENT_ID=attic-web
+# ATTIC_OIDC_CLIENT_SECRET=
 
 # Optional: Disable auth for development
 # ATTIC_AUTH_DISABLED=true
