--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,10 @@ services:
       - ATTIC_LOCAL_STORAGE_PATH=${ATTIC_LOCAL_STORAGE_PATH:-/data/uploads}
       - ATTIC_PUID=${ATTIC_PUID:-}
       - ATTIC_PGID=${ATTIC_PGID:-}
+      - ATTIC_OIDC_ENABLED=${ATTIC_OIDC_ENABLED:-false}
       - ATTIC_OIDC_ISSUER=${ATTIC_OIDC_ISSUER}
       - ATTIC_OIDC_CLIENT_ID=${ATTIC_OIDC_CLIENT_ID}
+      - ATTIC_OIDC_CLIENT_SECRET=${ATTIC_OIDC_CLIENT_SECRET:-}
       - ATTIC_BASE_URL=${ATTIC_BASE_URL:-http://localhost:8080}
       - ATTIC_SESSION_SECRET=${ATTIC_SESSION_SECRET}
       - ATTIC_CORS_ORIGINS=${ATTIC_CORS_ORIGINS:-http://localhost:8080}
