--- a/.env.example
+++ b/.env.example
@@ -30,12 +30,12 @@ ATTIC_S3_SECRET_KEY=your-secret-key
 # --------------------------------------
 # OIDC/Keycloak Configuration
 # --------------------------------------
-ATTIC_OIDC_ISSUER=https://your-keycloak-domain/realms/attic
+ATTIC_OIDC_ISSUER_URL=https://your-keycloak-domain/realms/attic
 ATTIC_OIDC_CLIENT_ID=attic-web
 ATTIC_OIDC_CLIENT_SECRET=your-client-secret-here
 
 # For development with local Keycloak
-# ATTIC_OIDC_ISSUER=http://localhost:8180/realms/attic
+# ATTIC_OIDC_ISSUER_URL=http://localhost:8180/realms/attic
 # ATTIC_OIDC_CLIENT_ID=attic-web
 # ATTIC_OIDC_CLIENT_SECRET=
 
