--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - ATTIC_PUID=${ATTIC_PUID:-}
       - ATTIC_PGID=${ATTIC_PGID:-}
       - ATTIC_OIDC_ENABLED=${ATTIC_OIDC_ENABLED:-false}
-      - ATTIC_OIDC_ISSUER=${ATTIC_OIDC_ISSUER}
+      - ATTIC_OIDC_ISSUER_URL=${ATTIC_OIDC_ISSUER_URL}
       - ATTIC_OIDC_CLIENT_ID=${ATTIC_OIDC_CLIENT_ID}
       - ATTIC_OIDC_CLIENT_SECRET=${ATTIC_OIDC_CLIENT_SECRET:-}
       - ATTIC_BASE_URL=${ATTIC_BASE_URL:-http://localhost:8080}
